--- a/nginx.config
+++ b/nginx.config
@@ -1,13 +1,21 @@
-server {
-    listen 80;
-    server_name localhost;
+events { }
 
-    location / {
-        root /usr/share/nginx/html;
-        index index.html;
-    }
+http {
+    server {
+        listen 80;
 
-    location ~* \.(css|js|jpg|jpeg|png|gif|svg)$ {
-        expires 7d;
+        server_name localhost;
+
+        location / {
+            root /usr/share/nginx/html;
+            index index.html;
+        }
+
+        # Configurare pentru fișierele statice (CSS, JS, etc.)
+        location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg|otf|map)$ {
+            expires 6M;
+            access_log off;
+            add_header Cache-Control "public";
+        }
     }
 }
