--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -22,8 +22,8 @@ jobs:
     - name: Log in to DockerHub
       uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        username: caracook1e
+        password: PAROLAdocker1
 
     - name: Build and Push Docker Image
       uses: docker/build-push-action@v4
