--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -1,10 +1,7 @@
-name: CI/CD Pipeline for Binary Tree Performance with NGINX
+name: Docker CI/CD
 
 on:
   push:
-    branches:
-      - main
-  pull_request:
     branches:
       - main
 
@@ -13,25 +10,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v3
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      - name: Build Docker image
+        run: docker build -t binary-tree-performance .
 
-    - name: Log in to DockerHub
-      uses: docker/login-action@v2
-      with:
-        username: caracook1e
-        password: PAROLAdocker1
-
-    - name: Build and Push Docker Image
-      uses: docker/build-push-action@v4
-      with:
-        context: .
-        push: true
-        tags: caracook1e/binary-tree-performance-nginx:latest
-
-    - name: Deploy to Local Server (Optional)
-      run: |
-        echo "Deploy steps here if necessary"
+      - name: Run Docker container
+        run: docker run -d -p 8080:80 binary-tree-performance
