--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -1,20 +1,21 @@
-name: Docker CI/CD
+name: Docker Image CI
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
-  build:
+
+  build_and_publish:
+
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
-
-      - name: Build Docker image
-        run: docker build -t binary-tree-performance .
-
-      - name: Run Docker container
-        run: docker run -d -p 8080:80 binary-tree-performance
+    - uses: actions/checkout@v4
+    - name: Build and Push the Docker image
+      run: |
+        docker login --username cara1910 --password ${{secrets.PAROLA}} ghcr.io
+        docker build . --tag ghcr.io/cara1910/proiect_map_18:latest
+        docker push ghcr.io/cara1910/proiectmap
