--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -18,4 +18,4 @@ jobs:
       run: |
         docker login --username cara1910 --password ${{secrets.PAROLA}} ghcr.io
         docker build . --tag ghcr.io/cara1910/proiect_map_18:latest
-        docker push ghcr.io/cara1910/proiectmap
+        docker push ghcr.io/cara1910/proiect_map_18
